Fixed Title Spacing Issue

--- a/style.css
+++ b/style.css
@@ -354,7 +354,7 @@ body {
 
 /* Experience Section */
 .experience {
-    padding: 50px 0;
+    padding: 50px 15px;
 }
 
 /* Use CSS Grid to create two columns:
